<resources>
    <string name="app_name">Lab03 Sample</string>
    <string name="retype_password">Retype Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
</resources>