<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTopic1"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginLeft="100sp"
            android:layout_marginTop="10sp"
            android:outlineProvider="bounds"
            android:text="@string/register"
            android:textAlignment="center"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="370dp"
            android:layout_height="48dp"
            android:layout_marginTop="10sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/username"
            android:textColor="@color/material_dynamic_neutral20"
            android:textColorHint="@color/material_dynamic_neutral30"
            android:textColorLink="#D1C5C5"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="370dp"
            android:layout_height="48dp"
            android:layout_marginTop="10sp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/email"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="370dp"
            android:layout_height="48dp"
            android:layout_marginTop="10sp"
            android:ems="10"
            android:inputType="phone"
            android:text="@string/phone_number"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="370dp"
            android:layout_height="48dp"
            android:layout_marginTop="10sp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/password"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edtRePassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10sp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/retype_password"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="370dp"
            android:layout_height="48dp"
            android:layout_marginTop="10sp"
            android:text="@string/submit"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="370dp"
            android:layout_height="48dp"
            android:layout_marginTop="10sp"
            android:text="@string/cancel" />

    </LinearLayout>
</layout>